# 1brc

./: .gitignore  CMakeLists.txt  LICENSE  OneBRC.cpp  README.md
onebrc/: Cargo.toml
onebrc/benches/: indexof_bm.rs  memchr_benches.rs  simd_benches.rs
onebrc/src/: main.rs
simdtest/: Cargo.toml
simdtest/src/: main.rs
