[package]
name = "okabrc"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"

[dependencies]
ahash = "0.8.7"
farmhash = "1.1.5"
memchr = "2.7.1"
memmap2 = "0.9.3"
rayon = "1.8.0"
